# json-idl-code-gen

./: .bazelrc  .gitignore  BUILD.bazel  Cargo.toml  MODULE.bazel  README.md  WORKSPACE  version.bzl
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
comgen/: comgen.rs  comgendebug.rs  comgenfile.rs  comgenfilter.rs  comgensource.rs  fileio.rs  main.rs
doc/: Cpp_Interface_Gen.MD  Cpp_Skeleton_Gen.MD  Cpp_Types_Gen.MD  Rust_Interface_Gen.MD  Rust_Types_Gen.MD  StandardDataTypeMapping.MD  car_window.hadl
doc/ifex/: car_window_interface.yaml  gen.sh
doc/ifex/cpp/: AST-cpp_doc.tpl
doc/ifex/hpp/: AST-hpp_doc.tpl
doc/ifex/rust/: AST-rust_doc.tpl
rules/: BUILD.bazel  comgen_source.bzl
src/: fileio.rs  main.rs
templates/: config.yaml  datatypes.cpp.jinja  datatypes.h.jinja  datatypes.rs.jinja  datatypes.skeleton.cpp.jinja  macros.jinja
testrules/: BUILD.bazel  car_window_types.yaml  test.yaml  testapp.cpp
testrules/testtempl/: config.yaml  test.cpp.jinja  test.h.jinja
tests/: car_window_types.hadl  car_window_types.yaml  fileio_tests.rs  main_tests.rs
tests/expected/: car_window_types.cpp  car_window_types.h  car_window_types.rs  car_window_types_skeleton.cpp  files.json
