# *******************************************************************************
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************
load("@crates//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_test")

filegroup(
    name = "embed_templates",
    srcs = glob(["templates/**"]),
    visibility = ["//visibility:public"],
)

rust_library(
    name = "comgen_lib",
    srcs = ["comgen/fileio.rs"],
    aliases = aliases(),
    compile_data = [":embed_templates"],
    edition = "2021",
    proc_macro_deps = [
        "@crates//:serde_derive",
    ],
    deps = all_crate_deps(normal = True),
)

rust_binary(
    name = "comgen",
    srcs = ["comgen/fileio.rs", "comgen/comgen.rs"],
    crate_root = "comgen/comgen.rs",
    aliases = aliases(),
    compile_data = [":embed_templates"],
    edition = "2021",
    proc_macro_deps = [
        "@crates//:serde_derive",
    ],
    deps = all_crate_deps(normal = True),
    visibility = ["//visibility:public"],
)

rust_binary(
    name = "comgenfile",
    srcs = ["comgen/fileio.rs", "comgen/comgenfile.rs"],
    crate_root = "comgen/comgenfile.rs",
    aliases = aliases(),
    compile_data = [":embed_templates"],
    edition = "2021",
    deps = all_crate_deps(normal = True),
    proc_macro_deps = [
        "@crates//:serde_derive",
    ],
    visibility = ["//visibility:public"],
)

rust_test(
    name = "comgen_tests",
    srcs = ["tests/main_tests.rs"],
    data = glob([
        "templates/**",
        "tests/**",
    ]) + ["//:comgen"],
    deps = [
        "@crates//:assert_cmd",
        "@crates//:predicates",
        "@crates//:similar-asserts",
    ],
    env = {
        "COMGEN_BIN": "$(rootpath //:comgen)",
    },
)

rust_test(
    name = "fileio_tests",
    srcs = [
        "comgen/fileio.rs",
    ],
    compile_data = [":embed_templates"],
    proc_macro_deps = [
        "@crates//:serde_derive",
    ],
    aliases = aliases(),
    deps = all_crate_deps(normal = True)+ [ ":comgen_lib"    ],
)
