[package]
name = "json-idl-code-gen"
version = "0.1.0"
edition = "2021"

[dependencies]
minijinja = "2.12.0"
rust-embed = "8"
serde = "1.0.228"
serde_json = "1.0.145"
serde_yaml = "0.9.33"
serde_derive = "1.0.228"
clap = { version = "4.4.7", features = ["derive"] }
anyhow = "1.0.88"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
similar-asserts = "1.7"
