load("//rules:comgen_source.bzl",  "comgen_file", "comgen_source")
load("@rules_cc//cc:defs.bzl", "cc_library", "cc_binary")

comgen_source(
    name = "test_comgen",
    src = "test.yaml",
    namespace = "test",
    templates = glob(["testtempl/**"]),
)

comgen_file(
    name = "test_comgen_src",
    comgen = ":test_comgen",
    type = "cpplibsrc",
    output = "test.cpp",
)

comgen_file(
    name = "test_comgen_hdr",
    comgen = ":test_comgen",
    type = "cpplibhdr",
    output = "test.h",
)

cc_library(
    name = "test_cc_lib",
    srcs = [":test_comgen_src"],
    hdrs = [":test_comgen_hdr"],
    strip_include_prefix = ".",
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "test_cc_bin",
    srcs = ["testapp.cpp"],
    deps = [":test_cc_lib"],
    visibility = ["//visibility:public"],
)   
